// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`no features 1`] = `
<div
  style="position: relative;"
>
  <svg
    class="SvgFeatureRendering"
    height="20px"
    width="100px"
  />
</div>
`;

exports[`one feature (compact mode) 1`] = `
<div
  style="position: relative;"
>
  <svg
    class="SvgFeatureRendering"
    height="0px"
    width="333.3333333333333px"
  >
    <g>
      <rect
        data-testid="one"
        fill="goldenrod"
        height="3.3333333333333335"
        width="1256.3333333333333"
        x="1991.7"
        y="0"
      />
    </g>
  </svg>
</div>
`;

exports[`one feature 1`] = `
<div
  style="position: relative;"
>
  <svg
    class="SvgFeatureRendering"
    height="0px"
    width="333.3333333333333px"
  >
    <g>
      <rect
        data-testid="one"
        fill="goldenrod"
        height="10"
        width="1"
        x="0.3"
        y="0"
      />
      <text
        dominant-baseline="hanging"
        style="font-size: 13px; fill: black; cursor: default;"
        x="0.3"
        y="12"
      >
        one
      </text>
    </g>
  </svg>
</div>
`;

exports[`processed transcript (reducedRepresentation mode) 1`] = `
<div
  style="position: relative;"
>
  <svg
    class="SvgFeatureRendering"
    height="0px"
    width="333.3333333333333px"
  >
    <g>
      <polygon
        data-testid="one"
        fill="goldenrod"
        points="0.3,0,1.3,5,0.3,10"
        stroke="goldenrod"
      />
      <text
        dominant-baseline="hanging"
        style="font-size: 13px; fill: black; cursor: default;"
        x="0.3"
        y="12"
      >
        one
      </text>
    </g>
  </svg>
</div>
`;

exports[`processed transcript 1`] = `
<div
  style="position: relative;"
>
  <svg
    class="SvgFeatureRendering"
    height="0px"
    width="333.3333333333333px"
  >
    <g>
      <rect
        data-testid="one"
        fill="goldenrod"
        height="10"
        width="1256.3333333333333"
        x="1991.7"
        y="0"
      />
      <text
        dominant-baseline="hanging"
        style="font-size: 13px; fill: black; cursor: default;"
        x="1991.7"
        y="12"
      >
        au9.g1002.t1
      </text>
    </g>
  </svg>
</div>
`;

exports[`svg broken rendering 1`] = `
<div
  style="position: relative;"
>
  <svg
    class="SvgFeatureRendering"
    height="0px"
    width="1400px"
  >
    <g>
      <rect
        data-testid="offset-1450768"
        fill="goldenrod"
        height="10"
        width="20000"
        x="0"
        y="0"
      />
      <text
        dominant-baseline="hanging"
        style="font-size: 13px; fill: black; cursor: default;"
        x="0"
        y="12"
      >
        LG1
      </text>
    </g>
    <g>
      <rect
        data-testid="offset-9275948"
        fill="goldenrod"
        height="10"
        width="22.33"
        x="8218"
        y="27"
      />
    </g>
    <g>
      <rect
        data-testid="offset-1451231"
        fill="goldenrod"
        height="10"
        width="29.02"
        x="92.7"
        y="27"
      />
      <text
        dominant-baseline="hanging"
        style="font-size: 13px; fill: black; cursor: default;"
        x="92.7"
        y="39"
      >
        LOC551580
      </text>
    </g>
    <g>
      <rect
        data-testid="offset-1455172"
        fill="goldenrod"
        height="10"
        width="63.89"
        x="107.9"
        y="54"
      />
      <text
        dominant-baseline="hanging"
        style="font-size: 13px; fill: black; cursor: default;"
        x="107.9"
        y="66"
      >
        LOC551555
      </text>
    </g>
  </svg>
</div>
`;

exports[`svg selected 1`] = `
<svg>
  <rect
    fill="#000"
    fill-opacity="0.2"
    height="14"
    width="7.3"
    x="-2"
    y="-2"
  />
  <rect
    fill="none"
    height="14"
    stroke="#00b8ff"
    width="7.3"
    x="-2"
    y="-2"
  />
</svg>
`;
